--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -33,6 +33,17 @@ jobs:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
+    - uses: mirromutth/mysql-action@v1.1
+    - name: Set up Mysql
+      with:
+        host port: 3800 # Optional, default value is 3306. The port of host
+        character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
+        collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
+        mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
+        mysql database: 'entity' # Optional, default value is "test". The specified database which will be create
+        mysql root password: '' # Required if "mysql user" is empty, default is empty. The root superuser password
+        mysql user: 'root' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
+        mysql password: '' # Required if "mysql user" exists. The password for the "mysql user"
     - name: Install dependencies
       run: mix deps.get
     - name: Run tests
