--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -33,10 +33,9 @@ jobs:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
-    - name: Set up mysql
-      uses: jordiprats/mysql-action@v1.1
+    - uses: mirromutth/mysql-action@v1.1
       with:
-        mysql version: '8.0'    
+        mysql root password: '' # Required if "mysql user" is empty, default is empty. The root superuser password
     - name: Install dependencies
       run: mix deps.get
     - name: Run tests
