--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: mirromutth/mysql-action@v1.1
       with:
         mysql user: 'root'
-        mysql password: 'test'
+        mysql password: ''
     - name: Install dependencies
       run: mix deps.get
     - name: Run tests
