--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -18,25 +18,26 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
+          MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: ""
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - uses: actions/checkout@v3
     - name: Wait for MySQL to be ready
       run: |
+        sudo systemctl start mysql.service
         echo "Waiting for MySQL..."
         until mysql -h127.0.0.1 -uroot -e 'SELECT 1'; do sleep 1; done
         echo "MySQL is ready!"
     - name: Set up Elixir
-      uses: actions/setup-elixir@v1
+      uses: erlef/setup-beam@61e01a43a562a89bfc54c7f9a378ff67b03e4a21 # v1.16.0
       with:
         elixir-version: '1.15.2'
         otp-version: '26.0'
     - name: Restore dependencies cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}-${{ hashFiles('config/config.exs') }}
@@ -45,3 +46,5 @@ jobs:
       run: mix deps.get
     - name: Run tests
       run: mix test --env=test
+    - name: Error handling
+      continue-on-error: ${{ always() }}
