--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -15,14 +15,14 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
     services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_DATABASE: test
-          MYSQL_ROOT_PASSWORD: ""
-        ports:
-          - 3306:3306
-
+        mysql:
+            image: mysql:5.7
+            env:
+                MYSQL_ALLOW_EMPTY_PASSWORD: yes
+                MYSQL_DATABASE: test
+            ports:
+                - 3306
+            options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
     - uses: actions/checkout@v3
     - name: Set up Elixir
