--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -43,5 +43,7 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Test MySql Connection
+      run: mysql -uroot -p \n
     - name: Run tests
       run: mix test
