--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -4,6 +4,11 @@
 # documentation.
 
 name: Elixir CI
+env:
+    DATABASE_NAME: entity_db
+    DATABASE_USERNAME: test_user
+    DATABASE_PASSWORD: password
+    DATABASE_HOST_NAME: mysql-master
 
 on:
   push:
@@ -20,14 +25,22 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
     services:
-        mysql:
-            image: mysql:5.7
-            env:
-                MYSQL_ALLOW_EMPTY_PASSWORD: yes
-                MYSQL_DATABASE: entity_db
-            ports:
-                - 3306
-            options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      mysql-master:
+        image: mysql:5.7
+        ports:
+          - 3306/tcp
+        env:
+          MYSQL_DATABASE: ${{ env.DATABASE_NAME }}
+          MYSQL_USER: ${{ env.DATABASE_USERNAME }}
+          MYSQL_PASSWORD: ${{ env.DATABASE_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ env.DATABASE_PASSWORD }}
+        options: >-
+          --name=mysql-master
+          --health-cmd="mysqladmin ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+          
     steps:
     - uses: actions/checkout@v3
     - name: Set up Elixir
