--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -56,5 +56,9 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Ping MySql Host
+      run: ping mysql-master
+    - name: Telnet the port of mysql
+      run: telnet 127.0.0.1 3306
     - name: Run tests
       run: mix test
