--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -58,6 +58,6 @@ jobs:
     - name: Install dependencies
       run: mix deps.get
     - name: Telnet the port of mysql
-      run: telnet mysql_host 3306
+      run: telnet 127.0.0.1 3306
     - name: Run tests
       run: mix test
