--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -56,5 +56,8 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Telnet the port of mysql
+      run: telnet mysql-master 3306
+      continue-on-error: true
     - name: Run tests
       run: mix test
