--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,14 +1,9 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Elixir CI
 env:
     DATABASE_NAME: entity_db
     DATABASE_USERNAME: test_user
     DATABASE_PASSWORD: password
-    DATABASE_HOST_NAME: mysql-master
+    DATABASE_HOST: localhost
 
 on:
   push:
@@ -21,21 +16,19 @@ permissions:
 
 jobs:
   build:
-
     name: Build and test
     runs-on: ubuntu-latest
     services:
-      mysql-master:
+      mysql:
         image: mysql:5.7
         ports:
-          - 3306/tcp
+          - 3306:3306
         env:
           MYSQL_DATABASE: ${{ env.DATABASE_NAME }}
           MYSQL_USER: ${{ env.DATABASE_USERNAME }}
           MYSQL_PASSWORD: ${{ env.DATABASE_PASSWORD }}
           MYSQL_ROOT_PASSWORD: ${{ env.DATABASE_PASSWORD }}
         options: >-
-          --name=mysql-master
           --health-cmd="mysqladmin ping"
           --health-interval=10s
           --health-timeout=5s
@@ -43,22 +36,25 @@ jobs:
           --network host
           
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: erlef/setup-beam@61e01a43a562a89bfc54c7f9a378ff67b03e4a21 # v1.16.0
+      uses: erlef/setup-elixir@v1
       with:
-        elixir-version: '1.15.2' # [Required] Define the Elixir version
-        otp-version: '26.0'      # [Required] Define the Erlang/OTP version
+        elixir-version: '1.15.2' # Define the Elixir version
+        otp-version: '24.0'      # Define the Erlang/OTP version
     - name: Restore dependencies cache
-      uses: actions/cache@v3
+      uses: actions/cache@v2
       with:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
-    - name: Telnet the port of mysql
-      run: telnet mysql-master 3306
+    - name: Debug MySQL Connection
+      run: |
+        apt-get update
+        apt-get install -y netcat
+        nc -vz ${{ env.DATABASE_HOST }} 3306
       continue-on-error: true
     - name: Run tests
       run: mix test
