--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -56,4 +56,4 @@ jobs:
         nc -vz ${{ env.DATABASE_HOST }} 3306
       continue-on-error: true
     - name: Run tests
-      run: mix test
+      run: iex -S mix test
