--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -53,9 +53,8 @@ jobs:
       run: |
         apt-get update
         apt-get install -y netcat
-        nc -vz ${{ env.DATABASE_HOST }} 3306
-      continue-on-error: true
     - name: Run tests
       run: |
-         iex -S  mix test
+         mix --version
+         mix test
          Person.all
