--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -51,8 +51,8 @@ jobs:
       run: mix deps.get
     - name: Debug MySQL Connection
       run: |
-        apt-get update
-        apt-get install -y netcat
+        sudo apt-get update
+        sudo apt-get install -y netcat
     - name: Run tests
       run: |
          mix --version
