--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -47,16 +47,15 @@ jobs:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
-    - name: Install dependencies
-      run: mix deps.get
     - name: Debug MySQL Connection
       run: |
         sudo apt-get update
         sudo apt-get install -y netcat
         nc -vz ${{ env.DATABASE_HOST }} 3306
         
-    - name: Test installation
+    - name: Install dependencies and Test installation
       run: |
+          mix deps.get
           iex -S mix
           Faker.first_name
           
