--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -53,8 +53,5 @@ jobs:
       run: mix deps.get
    
     - name: Run tests
-      run: mix test
+      run: mix test --trace
     
-    - name: Generate Documents
-      run: mix docs
-  
